# mantra

./: .gitignore  .gitmodules  .mantraignore  .mantraignore-annotations  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile  mantra.db  mantra.json5  memory.x  rust-toolchain.toml
.cargo/: config.toml
db/: Cargo.toml
db/migrations/: 20240414_InitialSchema.sql
db/src/: lib.rs
langs/mantra-lang-tracing/: Cargo.toml  README.md
langs/mantra-lang-tracing/src/: collect.rs  extract.rs  lib.rs  lsif_graph.rs  lsif_sample.json  main.rs  path.rs
langs/mantra-lang-tracing/src/collect/: collector.rs  mod.rs
langs/mantra-lang-tracing/src/traces/: mod.rs  parser.rs  variants.rs
langs/mantra-lang-tracing/tests/: req_extract.rs
langs/rust/examples/embedded-cover/: Cargo.toml  embedded.gdb  openocd.cfg  openocd.gdb
langs/rust/mantra-macros/: Cargo.toml  README.md
langs/rust/mantra-rust-macros/: Cargo.toml  README.md
langs/rust/mantra-rust-procm/: Cargo.toml  README.md
langs/rust/mantra-rust-trace/: Cargo.toml  README.md
mantra/: Cargo.toml  build.rs
mantra/.sqlx/: query-004b5776b05111251372263a304b43c5750493250aa32d6a44d156fe85d0f56c.json  query-00920caffc614de3c5f6e8dc6739584cb015dcb98449ff7edf9544eea6481511.json  query-027a1cb08c9d17a1bc46e5a0e567f2c8db323dcb37510eb229694244e3ce73cb.json  query-0285350cee10d51d4509602ca688abb65b54d0296f474eb699a4447ec124e49b.json  query-0470879f595f88e17cb71a89684de921e468ed1fd5d2ec5ea7b56378bc5d6dbd.json  query-05dd10046a123883dd0f31b35838504f3c8b50e3e271e0dba72edc22937db61b.json  query-05f8c27e8b74f46b63b07c8f1cf80901b60f8bbdb8a91c2360dfad9b961af893.json  query-06089e7adebd3989ea80c35d8bb265579708a0863f5e48ef59d55ad1d269065b.json  query-069b7eb5b0f0edf468125273bb2d77572e3c87918d0d6792523d86e8c146fd65.json  query-06a18d965792ffca2c9cb97e40c29aae570b04d9916e0fe14b181f2bce7f97b6.json  query-071542c036f4b22e112f0137d2241b9da9c26b551674dca53090d9ec319b7754.json  query-089dba7383a32626979d9193bb6cb801980fd6c9e9b88d1a4cbc5bd3b6c59747.json  query-096048ce5552d90fad16dec31c523ef37cf0dbad787f2e9f632b9e559d275c31.json  query-0cbad21d8f08bc5b3e096d2d00a3c57a4ff1a3f4ca583acf1ba03b36eff61700.json  query-0d5499ffe8e14c6a7e9c0ea2fc1583ed00354382684e988e5c10f623b7226f89.json  query-0e34c9cc1901db6a6e4c33ff259321b90b83484c7c18e8bca0e577940b69dc95.json  query-0e5a515d564e38b5aa3d283b6d29635bd6e41761836ac714aec850240a55aa66.json  query-0e9c80619ed58b00d5fa0cf3287e3ad91dee91c18fcb358163c3451633c4384e.json  query-0efdeb4104096a4ea2e874a87ad15b9564a65aa5e1055016ba1e6ed53b7f913b.json  query-0f8239eb00cf6d937635e91625b92cc42b49e042491b84ed372ad814e71f8e95.json  query-0fca3ba7248f5819f7e52be6f02ac1ed1509e7f506eb753b44c90ad9df8bf8a3.json  query-10e03f314ac62e67552cff59a5ec3b0ff86bc500d848a2feb9c61277ee1be0ca.json  query-14abe96737cf63ad6f2e630a92d6adb756ad30263400c5bd00763bb682417e6f.json  query-16662af80eaf1ac7d0451aa88a253c6810f72bf4437eaaad604708b3cb1d7947.json  query-17a528332e9f636b1f916dcce5ac70e0b0d0bc14a45df071ba174cc91d1f29dd.json  query-17a529a4774769e185422adcd7482733d6703e9da7bc2ce0df778551f21ccc3b.json  query-17dbaa798214a2015b11105f42f6609f90f79f8e37dff0e1f3458c638fe1c6b2.json  query-17fac1995805fe947726ab0ab5b5fc3bcb1bac428c8c05572279d46749ce6e2e.json  query-18a3519fc170f25a75fbf720847f46ed3ac47312aa48a7b008eae32c013b1d9d.json  query-19d51db83b05256f6edb0faaff68d6a2eb7d3113ce50b013779be82495bf28b5.json  query-19f66ec3fb2c907f600eb2f4f614d5c3b816893dba6abd5f8753337a156f097c.json  query-19ff1e0ef265ef74863facb51e08229a030f99878cac4b6127006442f3bbd591.json  query-1a5bf61977fa27f3f2abe5da9b90c9a52bde6e0c5db0807d7a97338c670dd2d7.json  query-1b985bb92632461f08e11ad3f1415478c22c9297d25043bb45a2cbf0d3a0b81d.json  query-1bfc4f20e6b299609896414a626a290f0c0e27b6c6f5f992a1b462c780930390.json  query-1d1bbeb059d078cab80e41f5ab172948451a2a0f186b590a2d1006f202e76833.json  query-1db83c8869d8cfa35878271bcda3fbb375d8fd5adfcc72349c099f960203d3ae.json  query-1df2f57de4314d8b7b143a4e2790b82c05fca2a1a981b115c2d2bf329236ce84.json  query-1e64374471b7f976c18effd305c519289ad0eaa16e4c8cb52e80c81712f8e375.json  query-203627183be4f70d8b8bd6b0c4c8ac69373260cc8ed1b69a06615316989424aa.json  (+282 more)
mantra/examples/: 20240512_13h11m00s_mantra_report.json  mantra.toml  mantra_report.html  mantra_report.json  my_review.toml  test_run_meta.html  usage.db  usage.rs
mantra/examples/usage/: coverage.json  custom_info.html  hierarchy_test.yaml  reqs.json  reqs.md  traces.rs  traces.yaml
mantra/migrations/: 1_BaseTables.sql  1_InitialSchema.sql  20240414_InitialSchema.sql  2_FormalViews.sql  2_Products.sql  3_ReportViews.sql  3_Requirements.sql  4_Annotations.sql  5_TestRuns.sql  6_Reviews.sql  7_AggregateBase.sql  8_AggregateVerified.sql
mantra/src/: cfg.rs  db.rs  db_old.rs  global_param.rs  io.rs  lib.rs  main.rs  path.rs
mantra/src/cli/: mod.rs
mantra/src/cmd/: coverage.rs  extract.rs  mod.rs  report.rs  report_default_template.html  requirements.rs  review.rs  trace.rs
mantra/src/db/: add.rs  mod.rs  test_setup.rs  test_stub.rs
mantra/src/link/: mod.rs
mantra/src/references/: changes.rs  mod.rs
mantra/src/req/: mod.rs  ref_list.rs
mantra/src/sync/: mod.rs
mantra/src/wiki/: link.rs  mod.rs
mantra/tests/: getting_started.rs  macro_use.rs  other_tests.rs  well_known_tests.rs
schema/: Cargo.toml  README.md
schema-gen/: AnnotationSchema.json  Cargo.toml  CoverageSchema.json  ProductsOverviewReportSchema.json  README.md  ReportContext.json  RequirementSchema.json  ReviewSchema.json  ShortReportSchema.json  TestRunSchema.json  TraceSchema.json
schema-gen/src/: main.rs
schema/src/: annotations.rs  coverage.rs  encoding.rs  lib.rs  product.rs  requirements.rs  reviews.rs  test_runs.rs  testcov.rs  traces.rs
schema/src/report/: annotations.rs  evidence_matrix.rs  mod.rs  nav.rs  overview.rs  product.rs  products.rs  requirement.rs  requirements.rs  review.rs  reviews.rs  short.rs  source_file.rs  source_folder.rs  sources.rs  test_case.rs  test_run.rs  test_runs.rs  tests.rs
trace/: Cargo.toml
trace/src/: lib.rs
(+528 files in other folders)
