[workspace]
resolver = "2"
members = [
    "mantra",
    "langs/mantra-lang-tracing",
    "langs/rust/mantra-rust-procm",
    "langs/rust/mantra-rust-macros",
    "langs/rust/mantra-rust-trace",
    "langs/rust/examples/*", "schema", "schema-gen",
]

[workspace.dependencies]
proc-macro2 = "1.0.81"
regex = "1.10.4"
tree-sitter = "0.22.0"
tree-sitter-rust = "0.21.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
schemars = "0.8.21"

[workspace.package]
version = "0.7.2"
edition = "2021"
repository = "https://github.com/mhatzl/mantra"
license = "MIT"

[profile.dev.package.sqlx-macros]
opt-level = 3
