[workspace]
resolver = "3"
members = [
    "mantra",
    "langs/mantra-lang-tracing",
    "langs/rust/mantra-rust-procm",
    "langs/rust/mantra-rust-macros",
    "schema", "schema-gen",
]

[workspace.dependencies]
proc-macro2 = "1.0.81"
regex = "1.10.4"
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "0.3.47", features = ["serde-human-readable", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
schemars = "0.8.21"
sqlx = "0.8.6"
anyhow = "1.0.100"
urlencoding = "2.1.3"

[workspace.package]
version = "0.7.6"
edition = "2024"
repository = "https://github.com/mhatzl/mantra"
license = "MIT"

[profile.dev.package.sqlx-macros]
opt-level = 3
