[workspace]
resolver = "3"
members = [
    "mantra",
    "langs/mantra-lang-tracing",
    "langs/rust/mantra-procm",
    "langs/rust/mantra-macros",
    "schema", "schema-gen",
]

[workspace.dependencies]
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4.21"
env_logger = "0.11.3"
schemars = "0.8.21"
sqlx = "0.8.6"
anyhow = "1.0.100"
urlencoding = "2.1.3"
thiserror = "1.0.59"

[workspace.package]
version = "0.8.0"
edition = "2024"
repository = "https://github.com/mhatzl/mantra"
license = "MIT"

[profile.dev.package.sqlx-macros]
opt-level = 3
