[package]
name = "mantra-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-lang-traits = { path = "../langs/mantra-lang-traits" }
sqlx = { version = "0.7.4", features = ["sqlite", "json", "runtime-tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
