[package]
name = "mantra"
description = "`mantra` offers a lightweight approach for requirement tracing and coverage."
readme.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true 
license.workspace = true
include = ["../.sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-lang-tracing = { path = "../langs/mantra-lang-tracing", version = "0" }
mantra-rust-trace = { path = "../langs/rust/mantra-rust-trace", version = "0" }
mantra-rust-macros = { path = "../langs/rust/mantra-rust-macros", version = "0", features = ["extract"] }
mantra-schema = { path = "../schema", version = "0" }
regex.workspace = true
tree-sitter-rust.workspace = true
log.workspace = true
env_logger.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
sqlx = { version = "0.8.2", features = ["sqlite", "json", "runtime-tokio", "time"] }
toml = { version = "0.8.13", features = ["parse"] }
ignore = "0.4.20"
mime_guess = "2.0.4"
thiserror = "1.0.59"
tera = "1.19.1"
intervaltree = "0.2.7"
encoding_rs_io = "0.1.7"