[package]
name = "mantra"
description = "`mantra` offers a lightweight approach for requirement tracing and coverage."
readme.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-lang-tracing = { path = "../langs/mantra-lang-tracing", version = "0.8.0-rc1" }
mantra-macros = { path = "../langs/rust/mantra-macros", version = "0.8.0-rc1" }
mantra-schema = { path = "../schema", version = "0.8.0-rc1" }
regex.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
urlencoding.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["any", "derive", "macros", "migrate", "sqlite", "json", "runtime-tokio", "time"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.18"
clap = { version = "4.5.4", features = ["derive", "env"] }
toml = { version = "0.8.13", features = ["parse"] }
ignore = "0.4.25"
mime_guess = "2.0.5"
minijinja = "2.19.0"
encoding_rs_io = "0.1.7"
covcon = "0.3.0"
quick-junit = "0.5.2"
chrono = "0.4.43"
glob = "0.3.3"
json5 = "1.3.1"
lsp-types = "0.97.0"

[dev-dependencies]
test-case = "3"

[features]
macros = []
