[package]
name = "schema-gen"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra = { path = "../mantra", version = "0.7.8" }
mantra-schema = { path = "../schema", version = "0.7.8" }
schemars.workspace = true
serde_json.workspace = true
