[package]
name = "mantra-schema"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra-lang-tracing = { path = "../langs/mantra-lang-tracing", version = "0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }
