[package]
name = "mantra-schema"
description = "Schemas for *mantra*."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
schemars.workspace = true
sha2 = "0.10.9"
base16ct = { version = "1.0.0", features = ["alloc"] }
relative-path = { version = "2.0.1", features = ["alloc", "serde"] }
sqlx.workspace = true
thiserror = "1.0.59"
