[package]
name = "mantra-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-db = { path = "../db" }
mantra-lang-tracing = { path = "../langs/mantra-lang-tracing" }
mantra-rust-trace = { path = "../langs/rust/mantra-rust-trace" }
ignore = "0.4.20"
mime_guess = "2.0.4"
tree-sitter-rust = "0.20.4"
clap.workspace = true
