[package]
name = "mantra-lang-tracing"
description = "Contains functionality needed to collect mantra annotations from code or plain text files."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra-schema = { path = "../../schema", version = "0" }
anyhow.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
serde_json.workspace = true

# proc-macro2 = { workspace = true, optional = true }
# regex = { workspace = true, optional = true }
# tree-sitter = { workspace = true, optional = true }
# lsp-types = { version = "0.97.0", optional = true }
# serde_json = { workspace = true, optional = true }

[build-dependencies]
cc = "1.0.90"
# cc = { version = "1.0.90", optional = true }

[dev-dependencies]
mantra-rust-macros = { path = "../rust/mantra-rust-macros", version = "0" }

[features]
# default = ["collect"]
# collect = ["extract", "dep:tree-sitter", "dep:cc", "dep:lsp-types", "dep:serde_json"]
# extract = ["dep:proc-macro2", "dep:regex"]
