[package]
name = "mantra-lang-tracing"
description = "Contains functionality needed to collect mantra annotations from code or plain text files."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra-schema = { path = "../../schema", version = "0" }
anyhow.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
serde_json.workspace = true

[build-dependencies]
cc = "1.0.90"

[dev-dependencies]
mantra-rust-macros = { path = "../rust/mantra-rust-macros", version = "0" }

[features]
