[package]
name = "mantra-lang-tracing"
description = "Contains functionality needed to collect mantra annotations from code or plain text files."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra-schema = { path = "../../schema", version = "0.8.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"

[build-dependencies]
cc = "1.0.90"

[dev-dependencies]
mantra-macros = { path = "../rust/mantra-macros", version = "0.8.0" }
insta = { version = "1.48.0", features = ["ron"] }

[features]
