[package]
name = "mantra-rust-macros"
description = "Provides macros to create requirement traces and coverage logs for the `mantra` framework."
version = "0.1.0"
edition.workspace = true
repository.workspace = true 
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-rust-procm = { path = "../mantra-rust-procm", version = "0" }
regex = { workspace = true, optional = true }
defmt = { version = "0.3.6", optional = true }
log = { version = "0.4.21", optional = true }
once_cell = { version = "1.19.0", optional = true }

[features]
defmt = ["dep:defmt"]
stdout = ["std"]
log = ["dep:log"]
std = []
extract = ["dep:regex", "dep:once_cell", "std"]
