[package]
name = "mantra-rust-macros"
description = "Provides macros to create requirement traces and coverage logs for the `mantra` framework."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mantra-rust-procm = { path = "../mantra-rust-procm", version = "0" }
# defmt = { version = "0.3.6", optional = true }

[features]
# defmt = ["dep:defmt"]
