[package]
name = "mantra-rust-procm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-lang-tracing = { path = "../../mantra-lang-tracing" }
proc-macro2.workspace = true
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
