[package]
name = "mantra-rust-trace"
description = "Collects requirement traces from rust code for the `mantra` framework."
version = "0.1.0"
edition.workspace = true
repository.workspace = true 
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-lang-tracing = { path = "../../mantra-lang-tracing", version = "0" }
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[build-dependencies]
cc.workspace = true

