[package]
name = "embedded-cover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-rust-macros = { path = "../../mantra-rust-macros", features = ["defmt"] }
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
xmc4700 = { version = "0.8.0", features = ["rt"]}
xmc4-hal = { version = "0.1.1", features = ["xmc47xx"]}
