[package]
name = "fn-cover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mantra-rust-macros = { path = "../../mantra-rust-macros", features = ["stdout", "log"] }
log.workspace = true
env_logger.workspace = true
